# src/app.ts
@@ -6,6 +6,7 @@ import authRoutes from "./routes/auth.routes";
 import triviaRoutes from "./routes/trivia.routes";
 import { errorHandler } from "./middleware/errorHandler";
 import { setupSwagger } from "./config/swagger";
+import roomRoutes from "./routes/room.routes";
 
 dotenv.config({ path: ".env" });
 
@@ -24,6 +25,7 @@ app.get("/", (_, res) => res.send("✅ TriviAndo API is running"));
 // Routes
 app.use("/api/v1/auth", authRoutes);
 app.use("/api/v1/trivia", triviaRoutes);
+app.use("/api/v1/rooms", roomRoutes);
 
 // Swagger docs
 setupSwagger(app);
